--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to JAVASCRIPT</h1>
     <script>
-        var a,b,c;
-        a=10;
-        b=20;
-        c=a+b;
-        document.write("The SUM of two no. is ",c);
+        function nk(){
+            document.write("<br><br>Welcome to JS")
+        } 
     </script>
+
+    <form>
+
+        <input type="text" placeholder="Your ID"><br><br>
+        <input type="password" placeholder="Password">
+        <br><br>
+        <button onclick="nk()">Submit</button>
+    </form> 
 </body>
 </html>
